-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.5.0
-
RHEL6 +
LU-3240on top b22fb817507ff52c02de38435fe90d758e852105
-
3
-
10785
Lustre: 789:0:(client.c:1897:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1380270533/real 1380270533] req@ffff88019a711ad8 x1447318007003140/t0(0) o38->
lustre-MDT0000-lwp-OST0001@0@lo:12/10 lens 400/544 e 0 to 1 dl 1380270558 ref 1 fl Rpc:XN/0/ffffffff rc 0/-1
Lustre: 789:0:(client.c:1897:ptlrpc_expire_one_request()) Skipped 2 previous similar messages
Lustre: lustre-OST0000 is waiting for obd_unlinked_exports more than 64 seconds. The obd refcount = 5. Is it stuck?
INFO: task ll_ost01_001:1701 blocked for more than 120 seconds.
"echo 0 > /proc/sys/kernel/hung_task_timeout_secs" disables this message.
ll_ost01_001 D 0000000000000000 0 1701 2 0x00000080
ffff88019f037930 0000000000000046 ffff88019f037890 ffffffff810b28ed
ffff88019f0378b0 0000000000000282 ffffc90012f32068 0000000000000282
ffff88019f0349f8 ffff88019f037fd8 000000000000fc88 ffff88019f0349f8
Call Trace:
[<ffffffff810b28ed>] ? trace_hardirqs_on+0xd/0x10
[<ffffffffa07daadb>] lu_object_find_at+0xab/0x360 [obdclass]
[<ffffffff81064650>] ? default_wake_function+0x0/0x20
[<ffffffffa07dada6>] lu_object_find+0x16/0x20 [obdclass]
[<ffffffffa05da265>] ofd_object_find+0x35/0xf0 [ofd]
[<ffffffffa07dbb4e>] ? lu_env_init+0x1e/0x30 [obdclass]
[<ffffffffa05e9e31>] ofd_lvbo_update+0x6f1/0xed8 [ofd]
[<ffffffffa05cfd5a>] ofd_setattr+0x7ea/0xb80 [ofd]
[<ffffffffa041ae7e>] ost_setattr+0x30e/0x870 [ost]
[<ffffffffa041dcdf>] ost_handle+0x1f7f/0x44e0 [ost]
[<ffffffffa067c564>] ? libcfs_id2str+0x74/0xb0 [libcfs]
[<ffffffffa0a97a1e>] ptlrpc_server_handle_request+0x39e/0xc30 [ptlrpc]
[<ffffffffa068246f>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]
[<ffffffffa0a8f207>] ? ptlrpc_wait_event+0xc7/0x300 [ptlrpc]
[<ffffffff810b28ed>] ? trace_hardirqs_on+0xd/0x10
[<ffffffffa0a98d2a>] ptlrpc_main+0xa7a/0x16b0 [ptlrpc]
[<ffffffffa0a982b0>] ? ptlrpc_main+0x0/0x16b0 [ptlrpc]
[<ffffffff810996b6>] kthread+0x96/0xa0
[<ffffffff8100c1ca>] child_rip+0xa/0x20
[<ffffffff81534750>] ? _spin_unlock_irq+0x30/0x40
[<ffffffff8100bb10>] ? restore_args+0x0/0x30
[<ffffffff81099620>] ? kthread+0x0/0xa0
[<ffffffff8100c1c0>] ? child_rip+0x0/0x20
INFO: lockdep is turned off.
Lustre: 789:0:(client.c:1897:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1380270618/real 1380270618] req@ffff88019464b510 x1447318007003160/t0(0) o250->MGC192.168.69.5@tcp@0@lo:26/25 lens 400/544 e 0 to 1 dl 1380270643 ref 1 fl Rpc:XN/0/ffffffff rc 0/-1
Lustre: 789:0:(client.c:1897:ptlrpc_expire_one_request()) Skipped 4 previous similar messages
Lustre: lustre-OST0000 is waiting for obd_unlinked_exports more than 128 seconds. The obd refcount = 5. Is it stuck?
SysRq : Trigger a crash